# ARR

./: .gitignore  CLAUDE.md  FINAL_SYSTEM_TRUTH.md  PROJECT_RESEARCH_PROFILE.md  README.md  README_INDEX.md  SERVER_MANAGEMENT_GUIDE.md  SSE_STREAMING_COMPLETE_SUMMARY.md  SYSTEM_STARTUP_GUIDE.md  start_servers.bat  start_servers.ps1  stop_servers.ps1  test_a2a_search.py  test_a2a_ui.html  test_result.json  test_unit_path_parsing.py
agent/law-domain-agents/: .env.example  .gitignore  2025-11-20_MAS_COLLABORATION_TEST_RESULTS.md  2025-11-20_SYSTEM_SETUP_COMPLETE.md  BACKEND_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  STREAMING_GUIDE.md  SYSTEM_FLOW.md  check_domains.py  diagnose_rne.py  domain_agent_factory.py  domain_manager.py  law_orchestrator.py  law_search_engine.py  law_utils.py  path_test_output.txt  path_test_output_updated.txt  print_domain_names.py  pyproject.toml  requirements.txt  rne_diag.txt  run_domain_1.py  server.py  setup.py  test_a2a.py  test_agent_rne.py  test_direct_agent.py  test_domain_1.py  test_path_scoring.py  test_rest_api.py  test_rne_stages.py  test_streaming.html
agent/law-domain-agents/coordinator/: README.md
agent/law-domain-agents/domain-1-agent/: __init__.py  config.py  domain_logic.py  graph.py  server.py
agent/law-domain-agents/multilayer_embedding_redesign/: ANALYSIS.md  DESIGN_PLAN.md  IMPLEMENTATION_STEPS.md  jo_test_results.txt  phase1_1_verify_database.py  phase1_2_add_jo_embeddings.py  test_jo_embedding.py  verification_results.txt
agent/law-domain-agents/shared/: __init__.py  (+2 more)
docs/: doc.md  (+2 more)
(+1152 files in other folders)
